<resources>
    <string name="app_name">Santander</string>
    <string name="txt_usuario">Olá, %1$s!</string>
    <string name="text_saldo_disponível">Saldo Disponível</string>
    <string name="txt_saldo_limite">Saldo - Limite</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_cartao_final">Cartão Final</string>
    <string name="cd_logotipo_santander">Logotipo Santander</string>

</resources>